feat: Add page reload button on updates
Signed-off-by: Raphael Höser <raphael@hoeser.info>

--- a/src/_includes/layouts/main.njk
+++ b/src/_includes/layouts/main.njk
@@ -62,6 +62,7 @@
     {% include "../partials/header.njk" %}
     {{ content | safe }}
     <pwa-installer></pwa-installer>
+    <page-updated></page-updated>
     {% include "../partials/footer.njk" %}
 
     <!-- Matomo -->
