Update job title

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -8,9 +8,8 @@
         <div class="fwrap">
           <h1>Woohey!</h1>
           <p>
-            I'm Raphael Höser, a student in Germany who loves doing stuff on the web fast and
-            lightweight. If you talk to me, you'll probably hear some jibber
-            jabber about web performance.
+            I'm Raphael Höser, a DevOps Engineer in Germany who loves doing stuff on the web fast and
+            lightweight. If you talk to me, you'll probably hear some jibber jabber about web performance.
           </p>
         </div>
       </section>
