Add first webgpu stl posts
Signed-off-by: Raphael Höser <raphael@hoeser.info>

--- a/assets/css/critical.css
+++ b/assets/css/critical.css
@@ -380,6 +380,10 @@ blockquote,
   background: hsl(0deg 50% 25%);
   color: #fff;
 }
+.blogpost-tag-category__series {
+  background: hsl(300, 50%, 25%);
+  color: #fff;
+}
 
 main ol,
 main ul {
