Update WebGPU part 2
Signed-off-by: Raphael Höser <raphael@hoeser.info>

--- a/src/_includes/layouts/main.njk
+++ b/src/_includes/layouts/main.njk
@@ -52,7 +52,7 @@
     using 11ty keeping things static so you can enjoy a fast and
     reliable read while I can watch the lighthouse fireworks in peace.
 
-    If you find this, feel free to ping me on twitter and let me know.
+    If you find this, feel free to ping me on my socials and let me know.
 
     <3
     Raphael
