--- a/src/sw.js.njk
+++ b/src/sw.js.njk
@@ -44,7 +44,7 @@ self.addEventListener("activate", function (event) {
 
 self.addEventListener('fetch', (event) => {
   event.respondWith(async function() {
-    {% if env.ELEVENTY_RUN_MODE == 'serve' %}
+    {% if eleventy.env.runMode == 'serve' %}
       return fetch(event.request);
     {% endif %}
     const cache = await caches.open(DYNAMIC_CACHE);
