add goodbye twitter post
Signed-off-by: Raphael Höser <raphael@hoeser.info>

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -18,12 +18,8 @@
         <p>If you want to say hi, feel free to do so</p>
         <ul>
           <li>
-            Mastodon:
-            <a rel="me" target="_blank" aria-label="Mastodon Account (@raphael@social.hoeser.dev)" rel="noopener" href="https://social.hoeser.dev/@raphael">@raphael@social.hoeser.dev</a>
-          </li>
-          <li>
-            Twitter:
-            <a rel="me" target="_blank" aria-label="Twitter Account (@Snapstromegon)" rel="noopener" href="https://twitter.com/Snapstromegon">@Snapstromegon</a>
+            Bluesky:
+            <a rel="me" target="_blank" aria-label="Bluesky Account (hoeser.dev)" rel="noopener" href="https://bsky.app/profile/hoeser.dev">@hoeser.dev</a>
           </li>
           <li>
             GitHub:
