--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -2,7 +2,7 @@
   <div class="content">
     <a href="/" id="logo">
       {% include "../../../assets/img/hummingbird_clean.svg" %}
-      <span>Snapstromegon</span>
+      <span>Raphael Höser</span>
     </a>
     <nav>
       {{ collections.all | eleventyNavigation | eleventyNavigationToHtml({
