--- a/src/_includes/layouts/webdev-sins.njk
+++ b/src/_includes/layouts/webdev-sins.njk
@@ -30,10 +30,10 @@ eleventyComputed:
           </div>
         </span>
       </div>
-      <div class="blogpost_meta">
+      <!-- <div class="blogpost_meta">
         <span class="blogpost_meta__label">Share this on:</span>
         <span class="blogpost_meta__value"><a href="https://twitter.com/intent/tweet?url={{ (meta.url + page.url) | url | encodeURIComponent }}&text={{title | encodeURIComponent}}">Twitter</a></span>
-      </div>
+      </div> -->
     </div>
   </div>
 </header>
