add: moving on post
Signed-off-by: Raphael Höser <raphael@hoeser.info>

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -8,7 +8,7 @@
         <div class="fwrap">
           <h1>Woohey!</h1>
           <p>
-            I'm Raphael Höser, a DevOps Engineer in Germany who loves doing stuff on the web fast and
+            I'm Raphael Höser, a software engineer in Germany who loves doing stuff on the web fast and
             lightweight. If you talk to me, you'll probably hear some jibber jabber about web performance.
           </p>
         </div>
